fix: Fix margins on mobile

--- a/client/Components/PressGallery/PressGallery.module.css
+++ b/client/Components/PressGallery/PressGallery.module.css
@@ -3,6 +3,9 @@
 
 .wrapperGallery {
   composes: main from 'containers';
+
+  margin-right: 0;
+  margin-left: 0;
 }
 
 .gallery {
@@ -66,6 +69,11 @@
 }
 
 @media (--desktop) {
+  .wrapperGallery {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
   .link {
     font-size: var(--size-m);
     line-height: var(--lh-m);
